demo/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: prod
  labels:
    app: demo-app
    app.kubernetes.io/name: demo-app
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
        app.kubernetes.io/name: demo-app
        env: prod
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: demo-app
        image: ghcr.io/lovius215/demo01:prod-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8092
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
