demo/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: prod
  labels:
    app: demo-app
    app.kubernetes.io/name: demo-app
    env: prod
spec:
  type: NodePort
  ports:
    - name: http
      port: 8092
      targetPort: 8092
      nodePort: 30092
  selector:
    app: demo-app
